# bdd-skill

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  参考文档.md
.claude/skills/api-steps-to-bdd-project/: SKILL.md
.claude/skills/markdown-testcase-fts-search/: SKILL.md
.claude/skills/playwright-trace-recorder/: SKILL.md
.claude/skills/trace-to-bdd/: SKILL.md
.claude/skills/trace-zip-to-json/: SKILL.md
.cursor/plans/: bdd_api_four_deliverables.plan.md  trace_zip_解析与映射.plan.md
.cursor/prompts/: playwright-trace-ui-api-mapping.md
archive/: CLAUDE.md  pyproject.toml
archive/.claude/: settings.local.json
archive/bdd_project/: __init__.py  conftest.py
archive/bdd_project/api/: __init__.py
archive/bdd_project/core/: __init__.py
archive/bdd_project/pages/tui/: .gitkeep
archive/bdd_project/tests/: test_tui.py  test_web.py
archive/behave_project/: README.md
archive/behave_project/features/: task.feature
archive/demo/trace_click_api/: server.py
bdd_project/: __init__.py  conftest.py
bdd_project/api/: task_api.py
bdd_project/core/: client.py
bdd_project/features/: task.feature
bdd_project/fixtures/api_steps/: task_api.json
bdd_project/steps/android/: __init__.py  conftest.py  steps.py
bdd_project/steps/api/: __init__.py  conftest.py  generated_api_steps.py  steps.py  task_api_steps.py
bdd_project/steps/common/: __init__.py  conftest.py  shared_steps.py
bdd_project/steps/iphone/: __init__.py  conftest.py  steps.py
bdd_project/steps/linux/: __init__.py  conftest.py  steps.py
bdd_project/steps/macos/: __init__.py  conftest.py  steps.py
bdd_project/steps/tui/: __init__.py  conftest.py  steps.py
bdd_project/steps/web/: __init__.py  conftest.py
bdd_project/steps/windows/: __init__.py  conftest.py  steps.py
bdd_project/tests/: test_android.py  test_api.py  test_iphone.py  test_linux.py  test_macos.py  test_tui.py  test_web.py  test_windows.py
behave_demo_project/: pyproject.toml
behave_demo_project/features/: environment.py  example.feature
behave_demo_project/features/steps/: example_steps.py
behave_project/features/: environment.py
behave_project/tests/: test_behave_runner.py
demo/trace_click_api/: api_steps.md  index.html  out.md  parse_trace.py  server.py
demo/trace_click_api/recordings/: task.py
demo/trace_click_api/tests/: test_parse_trace.py
demo_project/: conftest.py  pyproject.toml
demo_project/features/: example.feature  github_api_smoke.feature
demo_project/steps/: api_steps.py  example_steps.py
demo_project/support/: __init__.py  api_service.py  extractor.py  http_client.py  template_engine.py
demo_project/tests/: test_api_smoke.py  test_example.py  test_simple.py
notes/: 20260413-skill使用复盘-req-to-bdd.md  20260413-切换页面后验证功能是否正常-FAQ.md  20260415-BDD 自动化测试环境搭建 QuickStart.md
skills/: README.md
skills/bdd-enricher/: SKILL.md
skills/jinja2-template-gen/: SKILL.md
skills/req-to-bdd/: SKILL.md
skills/testcase-namer/: SKILL.md
steps/: example_steps.py
tests/: conftest.py  test_example.py  test_task.py
tests/features/: task.feature
tests/steps/: task_steps.py
(+44 files in other folders)
