[project]
name = "bdd-skill"
version = "0.1.0"
description = "BDD testing framework with multi-platform support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "gherkin-official>=29.0.0",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-bdd>=8.1.0",
    "pytest-playwright>=0.7.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bdd_project*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
