[project]
name = "behave-demo-project"
version = "0.1.0"
description = "BDD testing project with behave and playwright"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
playwright = "^1.40"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
